--- a/HealthStack-System-main/templates/footer.html
+++ b/HealthStack-System-main/templates/footer.html
@@ -69,17 +69,17 @@
                 <div class="footer-address">
                   <span><i class="fas fa-map-marker-alt"></i></span>
                   <p>
-                    Dhanmondi,<br />
-                    Dhaka, Bangladesh
+                    Rruga e Dibrës 372 ,<br />
+                    Tirana AL, 1000, Albania
                   </p>
                 </div>
                 <p>
                   <i class="fas fa-phone-alt"></i>
-                  +880 1234 567890
+                  +355 68 342 5678
                 </p>
                 <p class="mb-0">
                   <i class="fas fa-envelope"></i>
-                  HealthStack@gmail.com
+                  qsut@gmail.com
                 </p>
               </div>
             </div>
